Update function save info when login (split id and name account after first login)

--- a/Views/Shared/_TALayout.cshtml
+++ b/Views/Shared/_TALayout.cshtml
@@ -290,15 +290,8 @@
                         <div class="col-12">
                             <div class="mb-3">
                                 <label class="form-label" for="infoma">Mã sinh viên <span class="text-danger">*</span></label>
-                                <input value="@tk.Ma" name="@tk.ID" type="text" id="infoma" class="form-control" placeholder="Nhập mã sinh viên">
+                                <input disabled value="@tk.Ma" name="@tk.ID" type="text" id="infoma" class="form-control" placeholder="Nhập mã sinh viên">
                                 <span class="text-danger" id="valid-infoma"></span>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="mb-3">
-                                <label class="form-label" for="infohoten">Họ & Tên <span class="text-danger">*</span></label>
-                                <input value="@tk.HoTen" type="text" id="infohoten" class="form-control" placeholder="Nhập Họ & Tên đầy đủ">
-                                <span class="text-danger" id="valid-infohoten"></span>
                             </div>
                         </div>
                         <div class="col-12">
@@ -306,6 +299,13 @@
                                 <label class="form-label" for="infoemail">Email</label>
                                 <input disabled value="@tk.Email" type="text" id="infoemail" class="form-control" placeholder="Nhập địa chỉ Email đăng nhập">
                                 <span class="text-danger" id="valid-infoemail"></span>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="mb-3">
+                                <label class="form-label" for="infohoten">Họ & Tên <span class="text-danger">*</span></label>
+                                <input value="@tk.HoTen" type="text" id="infohoten" class="form-control" placeholder="Nhập Họ & Tên đầy đủ">
+                                <span class="text-danger" id="valid-infohoten"></span>
                             </div>
                         </div>
                         <div class="col-12">
