--- a/Views/Shared/_TALayout.cshtml
+++ b/Views/Shared/_TALayout.cshtml
@@ -304,7 +304,7 @@
                         <div class="col-12">
                             <div class="mb-3">
                                 <label class="form-label" for="infohoten">Họ & Tên <span class="text-danger">*</span></label>
-                                <input value="@tk.HoTen" type="text" id="infohoten" class="form-control" placeholder="Nhập Họ & Tên đầy đủ">
+                                <input disabled value="@tk.HoTen" type="text" id="infohoten" class="form-control" placeholder="Nhập Họ & Tên đầy đủ">
                                 <span class="text-danger" id="valid-infohoten"></span>
                             </div>
                         </div>
