--- a/Views/TeachingAssistant/Apply.cshtml
+++ b/Views/TeachingAssistant/Apply.cshtml
@@ -48,112 +48,19 @@
     <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="applyTitle">Đăng ký trợ giảng LHP: 221_71ITBS10103_0101 - Nhập môn công nghệ thông tin.</h5>
+                <h5 class="modal-title" id="applyTitle"></h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true"></span>
                 </button>
             </div>
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label class="form-label" for="hoten">Họ & Tên <span class="text-danger">*</span></label>
-                            <input disabled value="@tksv.HoTen" type="text" id="hoten" class="form-control" placeholder="Nhập Họ & Tên">
-                            <span class="text-danger" id="valid-hoten"></span>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label class="form-label" for="email">Email <span class="text-danger">*</span></label>
-                            <input disabled value="@tksv.Email" type="text" id="email" class="form-control" placeholder="Nhập địa chỉ Email">
-                            <span class="text-danger" id="valid-email"></span>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label class="form-label" for="ma">MSSV <span class="text-danger">*</span></label>
-                            <input value="@tksv.Ma" name="@tksv.ID" type="text" id="ma" class="form-control" placeholder="Nhập mã số sinh viên">
-                            <span class="text-danger" id="valid-ma"></span>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label class="form-label" for="dienthoai">Số điện thoại <span class="text-danger">*</span></label>
-                            <input value="@tksv.SDT" maxlength="10" data-type="numbers" type="tel" id="dienthoai" class="form-control" placeholder="09xxxxxxxx">
-                            <span class="text-danger" id="valid-dienthoai"></span>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label class="form-label" for="ngaysinh">Ngày sinh <span class="text-danger">*</span></label>
-                            <input name="@tksv.ID" value="@(tksv.NgaySinh == null ? "" : tksv.NgaySinh.Value.ToString("yyyy-MM-dd"))" type="text" id="ngaysinh" class="form-control flatpickr" placeholder="Chọn ngày sinh">
-                            <span class="text-danger" id="valid-ngaysinh"></span>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="mb-3">
-                            <label class="form-label" for="gioitinh">
-                                Giới tính <span class="text-danger">*</span>
-                            </label>
-                            <select class="form-select" id="gioitinh">
-                                @if (string.IsNullOrEmpty(tksv.GioiTinh))
-                                {
-                                    <option selected value="">---- Chọn giới tính ----</option>
-                                    <option value="Nam">Nam</option>
-                                    <option value="Nữ">Nữ</option>
-                                }
-                                else if (tksv.GioiTinh.Equals("Nam"))
-                                {
-                                    <option value="">---- Chọn giới tính ----</option>
-                                    <option selected value="Nam">Nam</option>
-                                    <option value="Nữ">Nữ</option>
-                                }
-                                else
-                                {
-                                    <option value="">---- Chọn giới tính ----</option>
-                                    <option value="Nam">Nam</option>
-                                    <option selected value="Nữ">Nữ</option>
-                                }
-
-                            </select>
-                            <span class="text-danger" id="valid-gioitinh"></span>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="mb-3">
-                            <label class="form-label" for="tbctl">Điểm trung bình chung tích lũy HK gần nhất <span class="text-danger">*</span></label>
-                            <input type="number" id="tbctl" class="form-control" placeholder="Nhập điểm trung bình chung">
-                            <span class="text-danger" id="valid-tbctl"></span>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="mb-3">
-                            <label class="form-label" for="drl">Điểm rèn luyện HK gần nhất <span class="text-danger">*</span></label>
-                            <input type="number" id="drl" class="form-control" placeholder="Nhập điểm rèn luyện">
-                            <span class="text-danger" id="valid-drl"></span>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="mb-3">
-                            <label class="form-label" for="dtk">Điểm tổng kết (thi lần 1) của học phần đăng ký làm TA <span class="text-danger">*</span></label>
-                            <input type="number" id="dtk" class="form-control" placeholder="Nhập điểm tổng kết môn (thi lần 1)">
-                            <span class="text-danger" id="valid-dtk"></span>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <label class="form-label" for="hinhanhmc">Hình ảnh minh chứng <small><small class="text-muted"><i>(Chọn tối đa 3 hình ảnh < 50MB. JPG, JPEG, PNG)</i></small></small> <span class="text-danger">*</span></label>
-                        <div class="mb-3">
-                            <input type="file" class="form-control form-control-file" id="hinhanhmc" accept="image/png, image/jpg, image/jpeg">
-                            <span class="text-danger" id="valid-hinhanhmc"></span>
-                        </div>
-
-                    </div>
-                </div>
+            <div class="modal-body" id="contentApply">
+               
             </div>
             <div class="modal-footer">
                 <button id="btnClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-                <button id="huydangky" type="button" class="btn btn-danger">Hủy đăng ký</button>
+                <button hidden id="huydangky" type="button" class="btn btn-danger">Hủy đăng ký</button>
                 <button id="btnSubmit" type="button" class="btn btn-primary">Lưu thông tin</button>
+                <button id="btnEditSubmit" type="button" class="btn btn-primary">Lưu thông tin</button>
             </div>
         </div>
     </div>
@@ -161,3 +68,5 @@
 
 <script src="~/Validation/student/load.js"></script>
 <script src="~/Validation/SVandTA/filterviewapply.js"></script>
+<script src="~/Validation/SVandTA/openapply.js"></script>
+<script src="~/Validation/SVandTA/submitapply.js"></script>
