Update view task list and view suggest lhp

--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -170,6 +170,15 @@
 
                 </div>
                 <div class="modal-footer">
+                    <div class="row col-12 mb-3">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="camket">
+                            <label class="form-check-label fw-bold" for="camket">
+                                Chọn khi đồng ý chịu toàn bộ trách nhiệm về đề xuất trợ giảng nếu có bất kì vấn đề gì xảy ra trong công tác trợ giảng.
+                            </label>
+                        </div>
+                        <span class="text-danger" id="valid-camket"></span>
+                    </div>
                     <button id="btnDeXuatClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
                     <button disabled id="btnDeXuatSubmit" type="button" class="btn btn-primary">Lưu thông tin</button>
                 </div>
