Add function update task when suggest accepted yet

--- a/Views/ClassSection/_TaskListOnlyView.cshtml
+++ b/Views/ClassSection/_TaskListOnlyView.cshtml
@@ -25,7 +25,7 @@
                                     <div class="form-control">@item.MoTa</div>
                                 </td>
                                 <td valign="middle" style="width: 80px;" class="pe-0 ps-3">
-                                    <div class="form-control">@(item.SoGioQuyDoi)h</div>
+                                    <div class="form-control">@(item.SoGioQuyDoi.ToString().Replace(",","."))</div>
                                 </td>
                                 <td valign="middle" class="pe-0 ps-3">
                                     <div class="form-control">@item.ThoiHanHoanThanh.ToString("dd/MM/yyyy")</div>
@@ -44,3 +44,6 @@
         </div>
     </div>
 </div>
+<script>
+    $('body').find('[id="btnviewtasklistmodalSubmit"]').prop('hidden', true);
+</script>
