--- a/Views/TeachingAssistant/_DetailAdvances.cshtml
+++ b/Views/TeachingAssistant/_DetailAdvances.cshtml
@@ -49,7 +49,7 @@
                                     <div class="form-control">@item.MoTa</div>
                                 </td>
                                 <td valign="middle" style="width: 80px;" class="pe-0 ps-3">
-                                    <div class="form-control">@(item.SoGioQuyDoi.ToString().Replace(",", ".")) h</div>
+                                    <div class="form-control">@(item.SoGioQuyDoi.ToString().Replace(",", "."))</div>
                                 </td>
                                 <td valign="middle" class="pe-0 ps-3">
                                     <div class="form-control">@item.ThoiHanHoanThanh.ToString("yyyy-MM-dd")</div>
