--- a/Views/ClassSection/Index.cshtml
+++ b/Views/ClassSection/Index.cshtml
@@ -201,6 +201,8 @@
                 </div>
                 <div class="modal-footer">
                     <button id="btnviewtasklistmodalClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                    <button hidden id="btnviewtasklistmodalSubmit" type="button" class="btn btn-primary">Lưu thông tin</button>
+
                 </div>
             </div>
         </div>
@@ -250,9 +252,9 @@
                                 <div class="col-6">
                                     <div class="mb-3">
                                         <select id="hocky" class="form-select w-auto">
-                                            <option value="7">Thứ 2, Tiết 1 - 3, Tuần 5</option>
-                                            <option value="7">Thứ 2, Tiết 1 - 3, Tuần 6</option>
-                                            <option value="7">Thứ 2, Tiết 1 - 3, Tuần 7</option>
+                                            <option value="7">Tuần 5</option>
+                                            <option value="7">Tuần 6</option>
+                                            <option value="7">Tuần 7</option>
                                         </select>
                                     </div>
                                 </div>
@@ -330,6 +332,7 @@
 <script src="~/Validation/teacher/classsection/suggestedTA.js"></script>
 <script src="~/Validation/teacher/classsection/DeXuatLHP.js"></script>
 <script src="~/Validation/teacher/classsection/viewTaskList.js"></script>
+<script src="~/Validation/teacher/classsection/updatetask.js"></script>
 <script>
     $(document).ready(function () {
         $("#diemDanhTable").DataTable({
